# mower_robot_ws

./: .gitignore  README.md  aau  document
src/mower_robot/: package.xml  setup.cfg  setup.py
src/mower_robot/config/: cartographer.lua  mower_rviz.rviz  nav2_params.yaml  slam_params.yaml
src/mower_robot/launch/: simulation.launch.py  slam_launch.py
src/mower_robot/models/materials/scripts/: materials.material
src/mower_robot/mower_robot/: auto_nav.py  initial_pose.py  teleop.py  urdf
src/mower_robot/urdf/: mower_robot.urdf
src/mower_robot/worlds/: simple_world.world
